; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/find/extr_option.c_find_create.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/find/extr_option.c_find_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* (%struct.TYPE_4__*, i8***)* }

@.str = private unnamed_addr constant [32 x i8] c"%s: unknown primary or operator\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @find_create(i8*** %0) #0 {
  %2 = alloca i8***, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8**, align 8
  store i8*** %0, i8**** %2, align 8
  %6 = load i8***, i8**** %2, align 8
  %7 = load i8**, i8*** %6, align 8
  store i8** %7, i8*** %5, align 8
  %8 = load i8**, i8*** %5, align 8
  %9 = load i8*, i8** %8, align 8
  %10 = call %struct.TYPE_4__* @lookup_option(i8* %9)
  store %struct.TYPE_4__* %10, %struct.TYPE_4__** %3, align 8
  %11 = icmp eq %struct.TYPE_4__* %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %1
  %13 = load i8**, i8*** %5, align 8
  %14 = load i8*, i8** %13, align 8
  %15 = call i32 @errx(i32 1, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i8* %14)
  br label %16

16:                                               ; preds = %12, %1
  %17 = load i8**, i8*** %5, align 8
  %18 = getelementptr inbounds i8*, i8** %17, i32 1
  store i8** %18, i8*** %5, align 8
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load i32* (%struct.TYPE_4__*, i8***)*, i32* (%struct.TYPE_4__*, i8***)** %20, align 8
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %23 = call i32* %21(%struct.TYPE_4__* %22, i8*** %5)
  store i32* %23, i32** %4, align 8
  %24 = load i8**, i8*** %5, align 8
  %25 = load i8***, i8**** %2, align 8
  store i8** %24, i8*** %25, align 8
  %26 = load i32*, i32** %4, align 8
  ret i32* %26
}

declare dso_local %struct.TYPE_4__* @lookup_option(i8*) #1

declare dso_local i32 @errx(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
